--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -30,20 +30,18 @@
 
         <p class='govuk-list app-list--definition'>
           <a href='ahw/current/start' class="govuk-link--no-visited-state"><strong>Version 5.3 (private beta) - current</strong></a><br>
-          <span class="govuk-body govuk-!-font-size-14">#Last updated on 7 August 2023
+          <span class="govuk-body govuk-!-font-size-14">#Last updated on 8 August 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
-              <li><strong>7 August 2023</strong>: Iterations (Issues 128 to 153 from Confluence) is now taken forward into Private beta. Latest changes around Solar intervention rate needs testing.</li>
+              <li><strong>8 August 2023</strong>: Iterations (Issues 128 to 153 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) is now taken forward into Private beta. Latest changes around Solar intervention rate needs testing.</li>
               </ul>
               </p>
-
-
             <p class='govuk-heading-m'>Previous versions</p>
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v52t/start' class="govuk-link--no-visited-state"><strong>Version 5.2</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14">#Last updated on 14 June 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>14 June 2023</strong>: Iterations (Issues 128 to 138 from Confluence) implemented based on Business requirements. This version was tested in Round 4 of user testing. </li>
+                <li><strong>14 June 2023</strong>: Iterations (Issues 128 to 138 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) implemented based on Business requirements. This version was tested in Round 4 of user testing. </li>
                 </ul>
                 {{ govukWarningText({
                   text: "This is not the fully journey",
@@ -53,40 +51,40 @@
               <a href='/ahw/v51/start' class="govuk-link--no-visited-state"><strong>Version 5.1</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14">#Last updated on 10 May 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>10 May 2023</strong>: Iterations (Issues 98 to 127 from Confluence) implemented based on Business requirements. This version is planned to be tested during Private beta.</li>
+                <li><strong>10 May 2023</strong>: Iterations (Issues 98 to 127 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) implemented based on Business requirements. This version is planned to be tested during Private beta.</li>
                 </ul>
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v5/start' class="govuk-link--no-visited-state"><strong>Version 5</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14">#Last updated on 4 April 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>4 April 2023</strong>: Iterations (Issues 84 to 97 from Confluence) implemented after Round 3 of user testing.</li>
+                <li><strong>4 April 2023</strong>: Iterations (Issues 84 to 97 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) implemented after Round 3 of user testing.</li>
                 </ul>
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v4/start' class="govuk-link--no-visited-state"><strong>Version 4</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14">#Last updated on 23 March 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>23 March 2023</strong>: Iterations (Issues 49 to 83 from Confluence) implemented. This version was tested in Round 3 of user testing.</li>
+                <li><strong>23 March 2023</strong>: Iterations (Issues 49 to 83 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) implemented. This version was tested in Round 3 of user testing.</li>
                 </ul>
 
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v3/start' class="govuk-link--no-visited-state"><strong>Version 3</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14"># Last updated on 9 February 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>6 March 2023</strong>: Iterations (Issues 18 to 48 from Confluence) implemented. This version was tested in Round 2 of user testing.</li>
+                <li><strong>6 March 2023</strong>: Iterations (Issues 18 to 48 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) implemented. This version was tested in Round 2 of user testing.</li>
                 </ul>
 
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v2/start' class="govuk-link--no-visited-state"><strong>Version 2</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14"># Last updated on 9 February 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>9 February 2023</strong>: Scoring questions added (issues 9 to 17 from Confluence). This part of the journey was not tested.</li>
+                <li><strong>9 February 2023</strong>: Scoring questions added (issues 9 to 17 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>). This part of the journey was not tested.</li>
                 </ul>
 
             <p class='govuk-list app-list--definition'>
               <a href='/ahw/v1/start' class="govuk-link--no-visited-state"><strong>Version 1</strong></a><br>
               <span class="govuk-body govuk-!-font-size-14"># Last updated on 9 February 2023<br/>
               <ul class="govuk-list govuk-list--bullet ">
-                <li><strong>15 December 2022</strong>: Baseline design added with Eligibility journey only (issues 1 to 7 from Confluence)</li>
+                <li><strong>15 December 2022</strong>: Baseline design added with Eligibility journey only (issues 1 to 7 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>)</li>
                 <li><strong>17 January and 03 February 2023</strong>: UR Round 1 completed with Eligibility journey only</li>
                 </ul>
 
