--- a/app/views/ahw/current/solar-fail.html
+++ b/app/views/ahw/current/solar-fail.html
@@ -29,7 +29,7 @@
       <p class="govuk-body">The roof must be able to support solar PV panels unless:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>the building is listed or on a world heritage site</li>
+        <li>the building is listed or on a World Heritage Site</li>
         <li>you're upgrading an existing building and would not otherwise make changes to the roof</li>
         <li>the roof faces only north or is heavily shaded</li>
         <li>the roof does not have 20m<sup>2</sup> of clear roof space</li>
