--- a/app/views/ahw/current/potential-grant2.html
+++ b/app/views/ahw/current/potential-grant2.html
@@ -64,23 +64,31 @@ Potential grant funding
           Potential grant funding
         </h1>
           <p class="govuk-body">You may be able to apply for a grant of up to £{{ potGrantFund | toFixed(2) | commafy}}, based on the estimated cost of £{{ estimatedCostTotal | toFixed(2) | commafy }}.</p>
-          <p class="govuk-body">This grant amount combines:
+          <p class="govuk-body">This grant amount combines:</p>
+            {% if  grantAmountTotal <= 500000 %}
             <ul class="govuk-list govuk-list--bullet">
               <li>£{{ grantAmount | toFixed(2) | commafy}} for calf housing costs (40% of £{{ calfhousingCost | toFixed(2) | commafy}})</li>
-              {% if  grantAmountTotal <= 500000 %}
-                <li>£{{ grantAmountCapped | toFixed(2) | commafy}} for solar PV system costs (25% of £{{ solarpvCost | toFixed(2) | commafy }})</li>
+              <li>£{{ grantAmountCapped | toFixed(2) | commafy}} for solar PV system costs (25% of £{{ solarpvCost | toFixed(2) | commafy }})</li>
+            </ul>
+        
+          {{ govukWarningText({
+              text: 'There’s no guarantee the project will receive a grant.',
+              iconFallbackText: 'Warning'
+          }) }}
                 {% else %}
-              <li>£{{ grantAmountCapped | toFixed(2) | commafy}} for solar PV system costs (25% of £{{ solarpvCost | toFixed(2) | commafy }}, capped at £{{ grantAmountCapped | toFixed(2) | commafy}})</li>
-              {% endif %}
+                <ul class="govuk-list govuk-list--bullet">
+                <li>£{{ grantAmount | toFixed(2) | commafy}} for calf housing costs (40% of £{{ calfhousingCost | toFixed(2) | commafy}})</li>
+                <li>£{{ grantAmountCapped | toFixed(2) | commafy}} for solar PV system costs (25% of £{{ solarpvCost | toFixed(2) | commafy }}, capped at £{{ grantAmountCapped | toFixed(2) | commafy}})</li>
+
               </ul>
-            </p>
+
           <p class="govuk-body">As calf housing costs take grant funding priority, you may be able to apply for a grant of up to £{{ grantAmountCapped | toFixed(2) | commafy}} for a solar PV system costs. The maximum grant is £500,000.</p>
 
         {{ govukWarningText({
             text: 'There’s no guarantee the project will receive a grant.',
             iconFallbackText: 'Warning'
         }) }}
-
+        {% endif %}
         <form id="mainForm" class="form" action="remaining-costs3" method="post">
 
           <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
