--- a/app/views/ahw/current/start.html
+++ b/app/views/ahw/current/start.html
@@ -46,6 +46,14 @@
             <li>are building new calf housing or extending or refurbishing existing calf housing</li>
 
           </ul>
+
+          <div class="govuk-body">
+          
+            <p>You can apply for up to:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>40% of estimated costs of calf housing</li>
+              <li>25% of the estimated costs of buying and installing a solar PV system on the grand-funded calf housing</li>
+              </ul>
           <p class="govuk-body">The minimum grant you can claim is £15,000 (40% of £37,500). The maximum grant is £500,000.</p>
         </div>
 
