--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -18,48 +18,7 @@
 
 {% block content %}
 
-  {% if (data['applyingfor'] == "Cover") %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <form id="mainForm" class="form" action="answers" method="post">
-          <h2 class="govuk-heading-l">What is the OS grid reference for your slurry store?</h2>
-          <div id="os-grid-hint" class="govuk-hint">You can find your slurry store's OS grid reference using the <a href="https://gridreferencefinder.com/" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">UK grid reference finder (opens in new tab)</a></div>
-          <div id="os-grid-hint" >
-            <p class="govuk-hint">On the OS grid reference finder page:</p>
-            <ol class="govuk-list govuk-list--number govuk-hint ">
-            <li>Enter the postcode of your location into the postcode box.</li>
-            <li>Right click on the map to find a grid reference at that point.</li>
-            <li>Select and right-click to copy the grid reference. </li>
-          </ol>
-          <p class="govuk-hint">Return to this screen and paste it in the format of 2 letters and 10 numbers, for example SP9620733594</p>
-          </div>
-
-          {{ govukInput({
-
-            label: {
-              text: "OS grid reference"
-            },
-              classes: "govuk-input--width-10",
-              id: "os-grid",
-              name: "os-grid",
-              value: data['os-grid']
-            }) }}
-
-
-
-          {{ govukWarningText({
-            text: "You must provide the correct location of your slurry store to avoid delays at full application.",
-            iconFallbackText: "Warning"
-          }) }}
-
-          {{ govukButton({
-            text: "Get your results"
-          }) }}
-
-
-        </form>
-  {% else %}
-
+  {% if (data['applyingfor'] == "Store") %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
@@ -110,6 +69,49 @@
           </p>
           <a href="#">
           </a>
+
+
+
+{% else %}
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+                <form id="mainForm" class="form" action="answers" method="post">
+                  <h2 class="govuk-heading-l">What is the OS grid reference for your slurry store?</h2>
+                  <div id="os-grid-hint" class="govuk-hint">You can find your slurry store's OS grid reference using the <a href="https://gridreferencefinder.com/" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">UK grid reference finder (opens in new tab)</a></div>
+                  <div id="os-grid-hint" >
+                    <p class="govuk-hint">On the OS grid reference finder page:</p>
+                    <ol class="govuk-list govuk-list--number govuk-hint ">
+                    <li>Enter the postcode of your location into the postcode box.</li>
+                    <li>Right click on the map to find a grid reference at that point.</li>
+                    <li>Select and right-click to copy the grid reference. </li>
+                  </ol>
+                  <p class="govuk-hint">Return to this screen and paste it in the format of 2 letters and 10 numbers, for example SP9620733594</p>
+                  </div>
+
+                  {{ govukInput({
+
+                    label: {
+                      text: "OS grid reference"
+                    },
+                      classes: "govuk-input--width-10",
+                      id: "os-grid",
+                      name: "os-grid",
+                      value: data['os-grid']
+                    }) }}
+
+
+
+                  {{ govukWarningText({
+                    text: "You must provide the correct location of your slurry store to avoid delays at full application.",
+                    iconFallbackText: "Warning"
+                  }) }}
+
+                  {{ govukButton({
+                    text: "Get your results"
+                  }) }}
+
+
+                </form>
           {% endif %}
       </div>
     </div>
