v2 updated business feedback

--- a/app/views/slurrystorage/current/project-responsibility.html
+++ b/app/views/slurrystorage/current/project-responsibility.html
@@ -28,7 +28,7 @@
                 Will you take full responsibility for your project?</h1>
             </legend>
             <div id="changed-name-hint" class="govuk-hint">
-              If you cannot take full responsibility for your project and maintaining the grant-funded items, you can agree with your landlord to take joint responsibility. For example, if you are on a short tenancy agreement you could choose this option.
+              If you are on a short tenancy, you can ask your landlord to take full responsibility for your project. <br>(For example, they agree to take over your agreed project if your tenancy ends).
             </div>
             <div class="govuk-radios govuk-radios">
               <div class="govuk-radios__item">
