--- a/app/views/slurrystorage/current/separator.html
+++ b/app/views/slurrystorage/current/separator.html
@@ -28,13 +28,13 @@
                   name: 'separator',
                   fieldset: {
                       legend: {
-                          text: 'Do you want a separator?',
+                          text: 'Do you want to add a slurry separator to your project?',
                           isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
                   hint: {
-                    text: ""
+                    text: "Slurry separators use a mechanical process to divide slurry into a liquid and solid fraction. These fractions can be kept in separate stores and applied at different times to your land. "
                 },
 
                   items: [
