--- a/app/views/slurrystorage/current/reference-number.html
+++ b/app/views/slurrystorage/current/reference-number.html
@@ -72,7 +72,7 @@
         {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
 
 {{ govukInsetText({
-  text: "If you plan to agree with your landlord to take joint responsibility for the project, they will need to underwrite your Grant Funding Agreement at full application. You should discuss and agree this with your landlord before you begin your full application."
+  text: "If you want your landlord to underwrite your project, they will need them to sign a letter of assurance. This letter will say your landlord agrees to take over your project, including conditions in the Grant Funding Agreement, if your tenancy ends. You should discuss and agree this with your landlord before you begin your full application."
 }) }}
       <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
 
