--- a/app/views/ahw/current/heritage.html
+++ b/app/views/ahw/current/heritage.html
@@ -33,7 +33,9 @@ Heritage site
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
+                  hint: {
+                    html: "You can apply for grant funding to buy and install a solar PV system if your building is listed or on a World Heritage Site."
+                  },
                   items: [
                 {
                   value: "yes",
