--- a/app/views/ahw/current/project-cost2.html
+++ b/app/views/ahw/current/project-cost2.html
@@ -26,7 +26,7 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
-          <h1 class="govuk-heading-l">Estimated project costs</h1>
+          <h1 class="govuk-heading-l">Estimated total project costs</h1>
           <div class="govuk-hint">
             <p class="govuk-body govuk-hint">You can apply for a grant of up to:
               <ul class="govuk-list govuk-list--bullet govuk-hint">
@@ -36,7 +36,7 @@
               </p>
             The minimum grant amount you can apply for the calf housing costs is £15,000 (40% of £37,500). The maximum grant is £500,000.<br><br>
             Do not include VAT<br><br>
-            Enter amount, for example 95,000<br>
+            Enter total estimated amounts, for example 95,000<br>
 
           </div>
 
