--- a/app/views/ahw/current/upgrade-existing-building.html
+++ b/app/views/ahw/current/upgrade-existing-building.html
@@ -33,7 +33,9 @@ upgradebuild site
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-
+                  hint: {
+                    html: "You can apply for grant funding to buy and install a solar PV system if you are upgrading an existing building and not making changes to the roof."
+                  },
                   items: [
                 {
                   value: "yes",
