--- a/app/views/slurrystorage/current/separator-options.html
+++ b/app/views/slurrystorage/current/separator-options.html
@@ -42,13 +42,13 @@ Separator options
                   },
 
                   hint: {
-                    html: "Capable to process 3m<sup>3</sup> of slurry per hour to produce at least 25% dry."
+                    html: "Capable to process at least 3m<sup>3</sup> of slurry per hour and producing at least 25% dry matter."
                   },
 
                   items: [
                 {
                   value: "Screen press 3",
-                  html: "Screen press processing 3m<sup>3</sup> of slurry per hour",
+                  html: "Screen press",
                   hint: {
                   text: "(Grant amount: £5,000 per unit)"
                 },
@@ -57,7 +57,7 @@ Separator options
 
                 {
                   value: "Screw press 3",
-                  html: "Screw press processing 3m<sup>3</sup> of slurry per hour",
+                  html: "Screw press",
                   hint: {
                   text: "(Grant amount: £5,000 per unit)"
                 },
@@ -130,7 +130,7 @@ Separator options
                     },
 
                     hint: {
-                      html: "A grant-funded slurry seprator must have a solid fraction storage."
+                      html: "You must stack your solid fraction on an impermeable surface to prevent leaking into the soil."
                     },
 
                     items: [
@@ -146,7 +146,7 @@ Separator options
                     value: "Concrete bunker",
                     html: "Concrete bunker",
                     hint: {
-                    html: "(Maximum grant amount: 20,000 per 100 m<sup>2</sup>)"
+                    html: "(Maximum grant contribution: up to 100 m<sup>2</sup>)"
                   },
                   conditional: {
                     html: textHtml
