Update issues 5 to 11

--- a/app/views/slurrystorage/current/project-responsibility.html
+++ b/app/views/slurrystorage/current/project-responsibility.html
@@ -28,7 +28,7 @@
                 Will you take full responsibility for your project?</h1>
             </legend>
             <div id="changed-name-hint" class="govuk-hint">
-              If you are on a short tenancy, you can ask your landlord to take full responsibility for your project. <br>(For example, they agree to take over your agreed project if your tenancy ends).
+              If you are on a short tenancy, you can ask your landlord to underwrite your agreement. This means they will take over your agreement if your tenancy ends. For example, your landlord could pass the agreed project to the new tenant. <br><br>This approach is optional and we will only ask for details at full application.
             </div>
             <div class="govuk-radios govuk-radios">
               <div class="govuk-radios__item">
@@ -40,7 +40,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
-               No, I plan to ask my landlord to take joint responsibility for the project
+               No, I plan to ask my landlord to underwrite my agreement
                 </label>
               </div>
 
