--- a/app/views/slurrystorage/current/separator-options.html
+++ b/app/views/slurrystorage/current/separator-options.html
@@ -42,7 +42,7 @@ Separator options
                   },
 
                   hint: {
-                    html: "Capable to process at least 3m<sup>3</sup> of slurry per hour and producing at least 25% dry matter."
+                    html: "Capable of processing at least 3m<sup>3</sup> of slurry per hour and producing at least 25% dry matter."
                   },
 
                   items: [
@@ -146,7 +146,7 @@ Separator options
                     value: "Concrete bunker",
                     html: "Concrete bunker",
                     hint: {
-                    html: "(Maximum grant contribution: up to 100 m<sup>2</sup>)"
+                    html: "Maximum grant contribution is up to 100 m<sup>2</sup><br> (Grant amount: £2000 per m2)"
                   },
                   conditional: {
                     html: textHtml
