--- a/app/views/slurrystorage/current/os-grid2.html
+++ b/app/views/slurrystorage/current/os-grid2.html
@@ -24,17 +24,18 @@ Os grid
         <h2 class="govuk-heading-l">What is the OS grid reference for your slurry store?</h2>
         <div id="os-grid-hint" class="govuk-hint">You can find your slurry store's OS grid reference using the <a href="https://gridreferencefinder.com/" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">UK grid reference finder (opens in new tab)</a></div>
         <div id="os-grid-hint" >
-          <p class="govuk-hint">On the OS grid reference finder page:</p>
+
           <ol class="govuk-list govuk-list--number govuk-hint ">
-            <li>Enter the postcode of your location into the postcode box.</li>
+            <li>On the OS grid reference finder page, enter the postcode of your location into the postcode box.</li>
             <li>Select 'Go'.</li>
             <li>Find the location of your slurry store on the map. You can select and drag the map to move the location.</li>
             <li>Right-click on the location of your slurry store. This will bring up a list of information. The grid reference is shown at the top.</li>
             <li>Select the grid reference (2 letters and 10 numbers) to highlight it, right-click on the grid reference and select 'Copy'.</li>
             <li>Return to the Slurry Infrastructure Grant checker screen.</li>
-            <li>Right-click on the OS grid reference box.</li>
-            <li>Paste it in the format of 2 letters and 10 numbers, for example SP9620733594</li>
-          </ol>
+            <li>Right-click on the OS grid reference number box. Select 'Paste'.</li>
+            </ol>
+
+            <p class="govuk-hint">Enter in the format of 2 letters and 10 numbers, for example SP9620733594</p>
           <p class="govuk-hint"></p>
         </div>
 
