--- a/app/views/slurrystorage/current/os-grid2.html
+++ b/app/views/slurrystorage/current/os-grid2.html
@@ -35,7 +35,7 @@ Os grid
             <li>Right-click on the OS grid reference number box. Select 'Paste'.</li>
             </ol>
 
-            <p class="govuk-hint">Enter in the format of 2 letters and 10 numbers, for example SP9620733594</p>
+            <p class="govuk-hint">Enter in the format of 2 letters and 10 numbers without spaces, for example SP9620733594.</p>
           <p class="govuk-hint"></p>
         </div>
 
