--- a/app/views/slurrystorage/current/project-type-fail.html
+++ b/app/views/slurrystorage/current/project-type-fail.html
@@ -31,7 +31,7 @@
         <li>replacing an existing store that is no longer fit for purpose with a new store </li>
         <li>adding a new store to increase existing capacity</li>
         <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
-        <li>adding an impermeable cover to existing stores to increase storage capacity</li>
+        <li>adding an impermeable cover to an existing store to increase storage capacity</li>
       </ul>
 
 
