--- a/app/views/slurrystorage/current/standardised-grant-amounts.html
+++ b/app/views/slurrystorage/current/standardised-grant-amounts.html
@@ -136,7 +136,7 @@ Standardised costs
         }) }}
         <br><br>
         {{ govukTable({
-          caption: "Separation equipment",
+          caption: "Slurry separation equipment",
           captionClasses: "govuk-table__caption--m",
           firstCellIsHeader: true,
           head: [
@@ -150,12 +150,45 @@ Standardised costs
           rows: [
           [
             {
-            html: "Separator"
+            html: "Screen press"
             },
             {
-            html: "£800 per item"
+            html: "£5,000 per unit"
             }
-          ]
+            ],
+            [
+              {
+              html: "Screw press"
+              },
+              {
+              html: "£5,000 per unit"
+              }
+              ],
+              [
+                {
+                html: "Gantry"
+                },
+                {
+                html: "£50,000 per unit"
+                }
+                ],
+                [
+                  {
+                  html: "Concrete pad"
+                  },
+                  {
+                  html: "£15,000 per unit"
+                  }
+                  ],
+                  [
+                    {
+                    html: "Concrete bunker"
+                    },
+                    {
+                    html: "£2,000 per square metre"
+                    }
+                    ]
+
           ]
         }) }}
         <br><br>
