--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -57,7 +57,7 @@
         </div>
 
       <div class="govuk-inset-text">
-        If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
+        If your project is eligible, you will be able to submit your online application to the Rural Payment Agency (RPA).
       </div>
 
 
