--- a/app/views/slurrystorage/current/tenancy.html
+++ b/app/views/slurrystorage/current/tenancy.html
@@ -69,9 +69,8 @@
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>If you are a tenant farmer, either you or your landlord can take responsibility for the Grant Funding Agreement. </p>
-            <a href="#">
-            </a>
+            <p>If you are a tenant farmer, you have the option to ask your landlord to underwrite your agreement.</p>
+            
 
         </div>
       </div>
