--- a/app/views/slurrystorage/current/farmer-type.html
+++ b/app/views/slurrystorage/current/farmer-type.html
@@ -79,11 +79,11 @@ Farmer type
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">This grant is for pig, beef or dairy farmers.<br><br>
-            If your main farm enterprise is pigs, this grant is to get your slurry storage levels to 8 months.
+            If your main farm enterprise is pig, the grant is to get your slurry storage levels to 8 months.
 
-<br><br>  For beef and dairy main farm enterprises, the grant is to get your storage levels to 6 months.
+<br><br>  If beef or dairy is your main farm enterprise, the grant is to get your storage levels to 6 months.
 
-        
+
           </p>
      </div>
    </div>
