--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -79,13 +79,13 @@
                   <h2 class="govuk-heading-l">What is the OS grid reference for your slurry store?</h2>
                   <div id="os-grid-hint" class="govuk-hint">You can find your slurry store's OS grid reference using the <a href="https://gridreferencefinder.com/" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">UK grid reference finder (opens in new tab)</a></div>
                   <div id="os-grid-hint" >
-                    <p class="govuk-hint">On the OS grid reference finder page:</p>
+
                     <ol class="govuk-list govuk-list--number govuk-hint ">
-                    <li>Enter the postcode of your location into the postcode box.</li>
-                    <li>Right click on the map to find a grid reference at that point.</li>
-                    <li>Select and right-click to copy the grid reference. </li>
+                    <li>On the OS grid reference finder page, enter the postcode of your location into the postcode box.</li>
+                    <li>Find the location of your slurry store on the map. Right-click on the map to find a grid reference at that point.</li>
+                    <li>Select and right-click to copy the grid reference.</li>
                   </ol>
-                  <p class="govuk-hint">Return to this screen and paste it in the format of 2 letters and 10 numbers, for example SP9620733594</p>
+                  <p class="govuk-hint">Return to this screen and paste it in the format of 2 letters and 10 numbers without spaces, for example SP9620733594.</p>
                   </div>
 
                   {{ govukInput({
