--- a/app/views/slurrystorage/current/project-start.html
+++ b/app/views/slurrystorage/current/project-start.html
@@ -35,7 +35,7 @@ Have you already started work on the project?
                       Yes, preparatory work
                     </label>
                     <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                      For example, quotes from suppliers, applying for planning permission
+                      For example, applying for planning permission
                     </div>
                   </div>
                   <div class="govuk-radios__item">
@@ -44,7 +44,7 @@ Have you already started work on the project?
                     Yes, we have begun project work
                     </label>
                     <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                      For example, digging, signing contracts, placing orders
+                      For example, started construction work, signing contracts
                     </div>
                   </div>
                   <div class="govuk-radios__item">
@@ -71,15 +71,9 @@ Have you already started work on the project?
       <h2 class="app-step-nav-related__heading">
         <span class="app-step-nav-related__pretitle">Eligibility</span>
         </h2>
-        <p>You will invalidate your application if you start the project or commit to any costs (such as placing orders) before you receive a funding agreement.</p>
-        <p>Before you start the project, you
-can:
-<ul class="govuk-list govuk-list--bullet">
-  <li>get quotes from suppliers</li>
-  <li>apply for planning permissions (this can take a long time)</li>
-</ul></p>
-      <a href="#">
-        </a>
+        <p>You will invalidate your application if you start the project or commit to any costs before you recieve funding agreement.</p>
+        <p>Before you start the project you can apply for planning permissions (this can take a long time).</p>
+
 
     </div>
     </div>
