Index updates and Back URL fixes

--- a/app/views/slurrystorage/current/cover-existing-stores.html
+++ b/app/views/slurrystorage/current/cover-existing-stores.html
@@ -32,7 +32,7 @@ Cover for existing stores (Cow and Dairy)
                   name: 'coverexistingstores',
                   fieldset: {
                       legend: {
-                          text: 'Do you want to apply for a cover for existing stores?',
+                          text: 'Do you want to apply to cover an existing store?',
                           isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
