--- a/app/views/slurrystorage/current/separator-options.html
+++ b/app/views/slurrystorage/current/separator-options.html
@@ -146,7 +146,7 @@ Separator options
                     value: "Concrete bunker",
                     html: "Concrete bunker",
                     hint: {
-                    html: "Maximum grant contribution is up to 100 m<sup>2</sup><br> (Grant amount: £2000 per m2)"
+                    html: "Maximum grant contribution is up to 100 m<sup>2</sup><br> (Grant amount: £2000 per m<sup>2</sup>)"
                   },
                   conditional: {
                     html: textHtml
