--- a/app/views/ahw/current/start.html
+++ b/app/views/ahw/current/start.html
@@ -48,7 +48,7 @@
           </ul>
 
           <div class="govuk-body">
-          
+
             <p>You can apply for up to:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>40% of estimated costs of calf housing</li>
@@ -58,7 +58,7 @@
         </div>
 
       <div class="govuk-inset-text">
-        If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
+        If your project is eligible, you will be able to submit your online application to the Rural Payment Agency (RPA).
       </div>
 
 
