--- a/app/views/slurrystorage/current/start.html
+++ b/app/views/slurrystorage/current/start.html
@@ -51,9 +51,10 @@
             <li>building a new store</li>
             <li>expanding or replacing an existing store</li>
             <li>adding an impermeable cover to an existing store</li>
-            <li>additional items such as separators</li>
+            <li>slurry separator equipment</li>
+            <li>additional items such as agitators, pumps or pipework</li>
           </ul>
-          <p class="govuk-body">You may be able to apply for up to 40% of the total project costs. The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
+            <p class="govuk-body">Standardised grant amounts are used to work out how much funding you may recieve. The minimum grant you can claim is £25,000. The maximum grant is £250,000.</p>
         </div>
 
       <div class="govuk-inset-text">
