--- a/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
@@ -31,8 +31,9 @@
     }) }}
     <p class="govuk-body">You can continue to check your eligibility for grant funding to build a new store, or expand or replace an existing store.</p>
     <form class="form" action="project-type" method="post">
-      <p>  <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue to apply for a store</button></p>
+      <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue to apply for a store</button>
     </form>
+    <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
     </div>
 </div>
 {% else %}
