--- a/app/views/slurrystorage/current/project-start.html
+++ b/app/views/slurrystorage/current/project-start.html
@@ -59,7 +59,7 @@ Have you already started work on the project?
             </div>
 
             {{ govukWarningText({
-              text: "You must not start project work or commit to project costs before recieving your funding agreement.",
+              text: "You must not start project work or commit to project costs before receiving your funding agreement.",
               iconFallbackText: "Warning"
             }) }}
     <p> <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
